welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:11: error: not found: value j
		j = j - 1;
                ^ZigZag:12: error: not found: value j
		setPos(i,j);
                         ^