welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
var x = getMondeHauteur();
var n = 0;
var z = getMondeLargeur
var i = 0 ;
for(h <- 0 to x-1){
	var j = h;
}
	for (k <- 0 to x-1){
		i = i + 1; 
		j = j - 1;
		setPos(i,j);
		ecritMessage(n);
		n = n + 1;}
	

}

